Add data scraping logic, sums by current month and all time

--- a/template.html
+++ b/template.html
@@ -1,3 +1,7 @@
-<div class="tesla-expandable">
-    <p>Total charges:</p>
+<div class="supercharger-totals">
+    <button class="summary">Home</button>
+    <button class="monthly">Monthly</button>
+    <button class="locations">Locations</button>
+    <p>Total charges (this month): <span id="total-charges-this-month"></span></p>
+    <p>Total charges (all time): <span id="total-charges"></span></p>
 </div>
