Simplify template html. Fix wrong dates in history graph

--- a/template.html
+++ b/template.html
@@ -1,16 +1,29 @@
 <div class="stfc__summary">
-    <p>Total charges this month:
-        <span class="stfc-text-large" id="total-charges-this-month"></span>
-        <small id="total-charges-this-month--visits"></small>
-    </p>
-    <p>Total charges this year:
-        <span class="stfc-text-large" id="total-charges-this-year"></span>
-        <small id="total-charges-this-year--visits"></small>
-    </p>
-    <p>Total charges all time:
-        <span class="stfc-text-large" id="total-charges"></span>
-        <small id="total-charges--visits"></small>
-    </p>
+
+    <!-- Monthly Total -->
+    <div id="total-charges-this-month">
+        <p>Total this month:
+            <span class="stfc-text-large"></span>
+            <small></small>
+        </p>
+    </div>
+
+    <!-- Annual Total -->
+    <div id="total-charges-this-year">
+        <p>Total this year:
+            <span class="stfc-text-large"></span>
+            <small></small>
+        </p>
+    </div>
+
+    <!-- All Time Total -->
+    <div id="total-charges-all-time">
+        <p>Total all time:
+            <span class="stfc-text-large"></span>
+            <small></small>
+        </p>
+    </div>
+
 </div>
 
 <canvas class="stfc__history" id="chart"></canvas>
