Add previous month total

--- a/template.html
+++ b/template.html
@@ -1,6 +1,6 @@
 <div class="stfc__summary">
 
-    <!-- Monthly Total -->
+    <!-- This Month -->
     <div id="total-charges-this-month">
         <p>Total this month:
             <span class="stfc-text-large"></span>
@@ -8,7 +8,15 @@
         </p>
     </div>
 
-    <!-- Annual Total -->
+    <!-- Last Month -->
+    <div id="total-charges-last-month">
+        <p>Total last month:
+            <span class="stfc-text-large"></span>
+            <small></small>
+        </p>
+    </div>
+
+    <!-- This Year -->
     <div id="total-charges-this-year">
         <p>Total this year:
             <span class="stfc-text-large"></span>
@@ -16,7 +24,7 @@
         </p>
     </div>
 
-    <!-- All Time Total -->
+    <!-- All Time -->
     <div id="total-charges-all-time">
         <p>Total all time:
             <span class="stfc-text-large"></span>
